# waq

./: .dockerignore  .gitignore  .gitmodules  .ocamlformat  Dockerfile  Makefile  README.md  compose.yaml  docker-compose.yml  dune-project  flake.nix  waq.opam
.github/: dependabot.yml
.github/workflows/: e2e-test.yaml  e2e_test.yaml  push-ghcr.yaml  push.yml  test.yaml
config/: dev_docker.yml
docker/: Dockerfile  docker-compose.yml  promtail-local-config.yaml
docker/config/: prod.yml
docker_dev/: Dockerfile.elk  Dockerfile.mastodon  launch.sh
docker_dev/waq-config/: dev.yaml
docker_prod/: dune  loki-config.yaml
docker_prod/config/: prod.sample.yml
e2e/: Makefile  launch-tmole.sh  ngrok.yml  start-ngrok.sh
e2e/manifests/: certificate.yaml  elk.yaml  jaeger.yaml  magout-values.yaml  mastodon.yaml  postgres.yaml  reset-mastodon-database.yaml  reset-waq-database.yaml  socks5-proxy.yaml  waq.yaml
lib/: activity.ml  config.ml  controller_api_v1_accounts_follow.ml  controller_api_v1_accounts_search.ml  controller_api_v1_accounts_unfollow.ml  controller_api_v1_statuses.ml  controller_api_v1_timelines_home.ml  controller_inbox.ml  controller_well_known_webfinger.ml  crypto.ml  db.ml  db.mli  dune  entity.ml  http.ml  httpx.ml  image.ml  job.ml  k.ml  log.ml  migration.ml  migrations.cppo.ml  migrations.inc  model.ml  oauth.ml  oauth_helper.ml  ogp.ml  otel.ml  regex.ml  router.ml  schema.ml  service_accept.ml  service_follow.ml  service_unfollow.ml  sql.ml  streaming.ml  text_helper.ml  throttle_fetch.ml  time.ml  util.ml  (+3 more)
lib/common/: activity.ml  db.ml  db_.ml  dune  http.ml  job.ml  sql.ml  util.ml
lib/controller/: api_v1_accounts_follow.ml  api_v1_accounts_search.ml  api_v1_accounts_unfollow.ml  api_v1_accounts_verify_credentials.ml  api_v1_apps.ml  api_v1_apps_verify_credentials.ml  api_v1_instance.ml  api_v1_statuses.ml  api_v1_streaming.ml  api_v1_timelines_home.ml  dune  helper.ml  inbox.ml  nodeinfo.ml  oauth_authorize.ml  oauth_token.ml  root.ml  static.ml  users.ml  well_known_host_meta.ml  well_known_webfinger.ml
lib/controller/api_v1/: instance.ml  markers.ml  media.ml  statuses.ml  streaming.ml
lib/controller/api_v1/accounts/: follow.ml  following.ml  lookup.ml  relationships.ml  root.ml  search.ml  statuses.ml  unfollow.ml  update_credentials.ml  verify_credentials.ml
lib/controller/api_v1/apps/: root.ml  verify_credentials.ml
lib/controller/api_v1/notifications/: root.ml
lib/controller/api_v1/push/: subscription.ml
lib/controller/api_v1/statuses/: context.ml  favourite.ml  favourited_by.ml  reblog.ml  root.ml  unfavourite.ml  unreblog.ml
lib/controller/api_v1/timelines/: home.ml
lib/controller/api_v2/: media.ml  search.ml
lib/controller/oauth/: authorize.ml  token.ml
lib/controller/users/: following.ml  inbox.ml  outbox.ml  root.ml  statuses.ml
lib/controller/well_known/: host_meta.ml  nodeinfo.ml  webfinger.ml
lib/migrate/: m20221230_220000_create_accounts.ml  m20221230_220001_create_users.ml  m20221230_220002_create_statuses.ml  m20221230_220003_create_follows.ml  m20221230_220004_create_follow_requests.ml  m20230121_195200_create_oauth_applications.ml  m20230121_195201_create_oauth_access_tokens.ml  m20230122_183000_create_oauth_access_grants.ml  m20230209_204400_create_favourites.ml  m20230212_175600_create_notifications.ml  m20230225_173800_create_account_stats.ml  m20230225_174100_create_status_stats.ml  m20230315_100000_add_updated_at_column.ml  m20230318_232000_add_avatar_header_remote_url.ml  m20230321_215500_create_unique_index_on_accounts_username_domain.ml  m20230321_215501_create_media_attachments.ml  m20230328_233800_create_mentions.ml  m20230331_183000_create_markers.ml  m20230410_193300_add_spoiler_text.ml  m20230416_182600_create_web_push_subscriptions.ml  m20230427_204200_create_preview_cards.ml  m20230427_205000_create_preview_cards_statuses.ml  m20230502_220400_add_note.ml  m20230506_145100_add_file_file_name.ml  m20230506_172100_add_blurhash.ml  m20230511_225300_add_blurhash.ml  m20230516_125248_add_actor_type.ml  m20230519_142558_add_url_to_statuses.ml  m20250216_204912_add_visibility_to_statuses.ml
lib/service/: accept.ml  create_note.ml  delivery.ml  distribute.ml  dune  follow.ml  insert_to_feed.ml  local_notify.ml  unfollow.ml
lib/worker/: accept.ml  account_update.ml  announce.ml  create_note.ml  delivery.ml  distribute.ml  insert_to_feed.ml  link_crawl.ml  local_notify.ml  removal.ml
lib_blurhash/: blurhash.ml  dune
lib_httpq/: bare_server.ml  client.ml  dune  header.ml  httpq.ml  method.ml  path_pattern.ml  server.ml  signature.ml  status.ml  util.ml
lib_logq/: dune  logq.ml
lib_oroutine/: buffered_reader.ml  context.ml  dune  eventfd.ml  global_run_queue_scheduler.ml  mtx.ml  oroutine.ml  runtime.ml  runtime.mli  scheduler.ml  scheduler.mli  util.ml  work_stealing_scheduler_wip.ml
lib_sqlx/: connection.ml  driver_pg.ml  dune  engine.ml  error.ml  migration.ml  model.ml  otel.ml  ppx_runtime.ml  sql.ml  sqlx.ml  util.ml  value.ml
lib_uebu/: dune  uebu.ml
lib_webpush/: dune  jwt.ml  util.ml  vapid.ml  webpush.ml
lib_yume/: bare_server.ml  client.ml  dune  header.ml  headers.ml  path_pattern.ml  server.ml  signature.ml  ws.ml  yume.ml
nix/: docker.nix  kneesocks.nix
ppx/: dune  ppx_deriving_sql.ml
test/: dune  test_controller.ml  test_db.ml  test_http.ml  test_model.ml  test_ogp.ml  test_ogp_eow_alc.html  test_ogp_flickr.html  test_ogp_flickr.json  test_ogp_theguardian.html  test_ogp_youtube.html  test_ogp_youtube.json  test_regex.ml  test_text_helper.ml  test_util.ml
test_e2e/: common.ml  common2.ml  dune  launch_mstdn.sh  launch_waq.sh  main.ml  waq_1.ml  waq_10_mention.ml  waq_2_ws.ml  waq_3.ml  waq_4_reblog.ml  waq_5_fav.ml  waq_6_rel.ml  waq_7_reblog.ml  waq_8_delete.ml  waq_9_ap.ml  waq_mstdn_10_attachment.ml  waq_mstdn_11_mention.ml  waq_mstdn_12_summary.ml  waq_mstdn_14_preview_card.ml  waq_mstdn_15_text.ml  waq_mstdn_16_cred.ml  waq_mstdn_2.ml  waq_mstdn_4_reblog.ml  waq_mstdn_5_reblog.ml  waq_mstdn_7_fav.ml  waq_mstdn_8_lookup_search.ml  waq_mstdn_9_delete.ml
(+55 files in other folders)
