opam-version: "2.0"
version: "0.1.3"
synopsis: "Yet another ActivityPub server"
description: "Yet another ActivityPub server"
maintainer: ["Ushitora Anqou"]
authors: ["Ushitora Anqou"]
license: "MIT"
tags: ["activitypub" "fediverse"]
homepage: "https://github.com/ushitora-anqou/waq"
doc: "https://github.com/ushitora-anqou/waq"
bug-reports: "https://github.com/ushitora-anqou/waq/issues"
depends: [
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
  "base64"
  "blurhash"
  "ca-certs"
  "camlimages"
  "cmdliner"
  "cppo"
  "cstruct"
  "dune" {>= "3.7"}
  "eio"
  "eio_main"
  "jingoo"
  "lambdasoup"
  "lwt"
  "lwt_eio"
  "lwt_ppx"
  "mirage-crypto-rng"
  "mirage-crypto-rng-eio"
  "ocaml" {>= "5.1.0"}
  "ocamlformat" {= "0.25.1" & with-dev-setup}
  "odoc" {with-doc}
  "pcre"
  "postgresql"
  "ppx_yojson_conv" {= "v0.15.1"}
  "ptime"
  "re"
  "safepass"
  "tls"
  "tls-eio"
  "uri"
  "uuidm"
  "x509"
  "xml-light"
  "yojson"
  "yume"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ushitora-anqou/waq.git"
pin-depends:[
  [ "camlimages.5.0.5" "git+https://github.com/ushitora-anqou/camlimages.git#90ceb604527e5e1daddc969d920ff37d118b8a60" ]

  # The following 3 packages are pinned for yume.
  # See also:
  # - https://github.com/dinosaure/multipart_form/issues/39
  # - https://github.com/vbmithr/ocaml-websocket/issues/136
  [ "websocket.2.16" "git+https://github.com/ushitora-anqou/ocaml-websocket#74988ec5ec7d7c620e7d58c5509acd003107c513" ]
  [ "multipart_form.0.5.0" "git+https://github.com/dinosaure/multipart_form#a794239b8fc9601540ffea489b2c470227216c5e" ]
  [ "multipart_form-eio.0.5.0" "git+https://github.com/dinosaure/multipart_form#a794239b8fc9601540ffea489b2c470227216c5e" ]
  [ "yume.0.1.2" "git+https://github.com/ushitora-anqou/yume.git#0.1.2" ]
]
