opam-version: "2.0"
version: "0.1.3"
synopsis: "Yet another ActivityPub server"
description: "Yet another ActivityPub server"
maintainer: ["Ushitora Anqou"]
authors: ["Ushitora Anqou"]
license: "MIT"
tags: ["activitypub" "fediverse"]
homepage: "https://github.com/ushitora-anqou/waq"
doc: "https://github.com/ushitora-anqou/waq"
bug-reports: "https://github.com/ushitora-anqou/waq/issues"
depends: [
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
  "base64"
  "blurhash"
  "ca-certs"
  "camlimages"
  "cmdliner"
  "cppo"
  "cstruct"
  "digestif"
  "dune" {>= "3.7"}
  "eio"
  "eio_main"
  "jingoo"
  "lambdasoup"
  "lwt"
  "lwt_eio"
  "lwt_ppx"
  "mirage-crypto-rng"
  "mirage-crypto-rng-eio"
  "ocaml" {>= "5.1.0"}
  "ocaml-lsp-server" {with-dev-setup}
  "ocamlformat" {= "0.25.1" & with-dev-setup}
  "odoc" {with-doc}
  "pcre"
  "postgresql"
  "ppx_yojson_conv" {= "v0.15.1"}
  "ptime"
  "re"
  "safepass"
  "tls"
  "tls-eio"
  "uri"
  "uuidm"
  "x509"
  "xml-light"
  "yojson"
  "yume"
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    "@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ushitora-anqou/waq.git"
pin-depends:[
  [ "camlimages.5.0.5" "git+https://github.com/ushitora-anqou/camlimages.git#90ceb604527e5e1daddc969d920ff37d118b8a60" ]
  [ "yume.0.1.9" "git+https://github.com/ushitora-anqou/yume.git#0.1.9" ]
]
