opam-version: "2.0"
synopsis: "Yet another ActivityPub server"
description: "Yet another ActivityPub server"
maintainer: ["Ushitora Anqou"]
authors: ["Ushitora Anqou"]
license: "MIT"
tags: ["activitypub" "fediverse"]
homepage: "https://github.com/ushitora-anqou/waq"
doc: "https://github.com/ushitora-anqou/waq"
bug-reports: "https://github.com/ushitora-anqou/waq/issues"
depends: [
  "alcotest" {with-test}
  "alcotest-lwt" {with-test}
  "base64"
  "blurhash"
  "ca-certs"
  "camlimages" {= "5.0.5+waq.1"}
  "cmdliner"
  "cppo"
  "cstruct"
  "digestif"
  "dune" {>= "3.7"}
  "eio"
  "eio_main"
  "jingoo"
  "lambdasoup"
  "lwt"
  "lwt_eio"
  "lwt_ppx"
  "mirage-crypto-rng" {< "1.2.0"}
  "mirage-crypto-rng-eio" {< "1.2.0"}
  "ocaml" {>= "5.1.0"}
  "odoc" {with-doc}
  "pcre"
  "postgresql"
  "ppx_yojson_conv"
  "ptime"
  "re"
  "safepass"
  "tls"
  "tls-eio"
  "uri"
  "uuidm"
  "x509"
  "xml-light"
  "yojson"
  "yume" {= "0.1.10+waq"}
]
build: [
  ["dune" "subst"] {dev}
  [
    "dune"
    "build"
    "-p"
    name
    "-j"
    jobs
    "@install"
    #"@runtest" {with-test}
    "@doc" {with-doc}
  ]
]
dev-repo: "git+https://github.com/ushitora-anqou/waq.git"
