(rule
 (targets migrations.ml)
 (deps
  (:src migrations.cppo.ml)
  migrations.inc)
 (action
  (run %{bin:cppo} %{src} -o %{targets})))

(library
 (name waq)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.make
   ppx_deriving.show
   ppx_deriving_yaml
   ppx_yojson_conv
   ppx_sqlx))
 (libraries
  base64
  blurhash
  camlimages.core
  camlimages.jpeg
  camlimages.gif
  camlimages.png
  camlimages.tiff
  camlimages.freetype
  camlimages.exif
  camlimages.xpm
  cstruct
  eio
  eio_main
  fpath
  jingoo
  lambdasoup
  logq
  lwt
  lwt_eio
  lwt.unix
  mirage-crypto-rng
  mirage-crypto-rng-eio
  pcre
  postgresql
  ptime
  result
  safepass
  sqlx
  uri
  uuidm
  webpush
  xml-light
  yaml
  yaml.unix
  yojson
  yume)
 (flags :standard -warn-error -33))

(include_subdirs qualified)
