(rule
 (targets migrations.ml)
 (deps
  (:src migrations.cppo.ml)
  migrations.inc)
 (action
  (run %{bin:cppo} %{src} -o %{targets})))

(library
 (name waq)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.make
   ppx_deriving.show
   ppx_yojson_conv
   ppx_sqlx))
 (libraries
  base64
  blurhash
  camlimages.core
  camlimages.jpeg
  camlimages.gif
  camlimages.png
  camlimages.tiff
  camlimages.freetype
  camlimages.exif
  camlimages.xpm
  cstruct
  eio
  eio_main
  jingoo
  lambdasoup
  lwt
  lwt_eio
  lwt.unix
  mirage-crypto-rng
  mirage-crypto-rng-eio
  opentelemetry
  opentelemetry-client-ocurl
  opentelemetry.ambient-context
  opentelemetry.ambient-context.eio
  pcre
  postgresql
  ptime
  safepass
  sqlx
  uri
  uuidm
  webpush
  xml-light
  yojson
  yume)
 (flags
  :standard
  -warn-error
  -33
  -open
  Ppx_yojson_conv_lib.Yojson_conv.Primitives))

(include_subdirs qualified)
