(library
 (name httpq)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.make
   ppx_deriving.show
   ppx_deriving_yaml
   ppx_yojson_conv))
 (libraries
  base64
  cohttp-lwt-unix
  cstruct
  logq
  lwt
  lwt.unix
  multipart_form
  multipart_form-lwt
  ptime
  result
  sha
  unix
  uri
  websocket
  websocket-lwt-unix.cohttp
  x509
  yojson))
