(library
 (name common)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.make
   ppx_deriving.show
   ppx_deriving_sql
   ppx_deriving_yaml
   ppx_deriving_yojson))
 (libraries
  base64
  bigstringaf
  cstruct
  fpath
  httpaf
  httpaf-lwt-unix
  lwt
  lwt.unix
  mirage-crypto-rng.lwt
  postgresql
  ppx_deriving_yojson.runtime
  ptime
  re
  re.pcre
  result
  sha
  unix
  uri
  x509
  yaml
  yaml.unix
  yojson))
