(library
 (name service)
 (preprocess
  (pps
   lwt_ppx
   ppx_deriving.enum
   ppx_deriving.make
   ppx_deriving.show
   ppx_deriving_yaml
   ppx_deriving_yojson
   ppx_rapper))
 (libraries
  caqti
  caqti-driver-postgresql
  caqti-lwt
  common
  httpaf
  httpaf-lwt-unix
  jingoo
  logs
  logs.fmt
  lwt
  lwt.unix
  mirage-crypto-rng.lwt
  ppx_deriving_yojson.runtime
  ppx_rapper_lwt
  re
  re.pcre
  sha
  uri
  uuidm
  yaml
  yaml.unix
  yojson
  x509))
